--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp-postcss": "^8.0.0",
     "gulp-pug": "^4.0.1",
     "gulp-sass": "^4.1.0",
+    "gulp-strip-css-comments": "^2.0.0",
     "gulp-uglify": "^3.0.2",
     "node-sass": "^4.14.1"
   }
